fixed show form button's z-index added a container for the form to appear as modal and cover tasks

--- a/vite-react-todo/src/App.scss
+++ b/vite-react-todo/src/App.scss
@@ -9,4 +9,14 @@ main {
         top: 0px;
         left: 0px;
     }
+
+    .formContainer {
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.507);
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        z-index: 110;
+        position: absolute;
+    }
 }
